fixed login and register title alignment

--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -739,8 +739,8 @@ ul {
 
     .logintxt {
       padding-top: 10%;
-      padding-left: 34%;
-      margin-bottom: -3%;
+      padding-left: 26%;
+      margin-bottom: -4%;
     }
 
     .loginIcon {
@@ -780,8 +780,8 @@ ul {
 
     .logintxt-registration {
       padding-top: 10%;
-      padding-left: 28%;
-      margin-bottom: -3%;
+      padding-left: 18%;
+      margin-bottom: -4%;
     }
 
     /* End Registration area */
